# Competition-of-IOT

./: .cproject  .project  README.md  takeoff.py  telecontroller.py  test1.py  test2.py
area_reprojected/: .project  CMakeLists.txt  README.md
area_reprojected/config/: stereo_paras.yaml
area_reprojected/src/: CMakeLists.txt
area_reprojected/test/: CMakeLists.txt  main.cpp
detect_in_camera/: CMakeLists.txt  README.md  detect_in_camera.kdev4  makefile  tracker.cpp
detect_in_camera/.kdev4/: area_reprojected.kdev4  detect_in_camera.kdev4
detect_in_camera/config/: stereo_paras.yaml
detect_in_camera/include/my_refind/: LedController.h  PID.h  common.h  config.h  para.h
detect_in_camera/src/: CMakeLists.txt  config.cpp
detect_in_camera/test/: CMakeLists.txt  test.cpp  test.cpp.bak  test.cpp.test  test.cpp.use  test_double.cpp  test_single.cpp  test_single_camera.cpp  test_single_dell.cpp
extract_feature/: CMakeLists.txt  README  main.cpp
object_detect_tracking_demo/: CMakeLists.txt  README.txt  main.cpp
trangulate/: CMakeLists.txt  README.md  main.cpp  stereo_camera.yaml  top_leftwithright.mat
vision_control/Flight2/: main.cpp
